# FlappyBird

./: CMakeCache.txt  CMakeLists.txt  Engine.h  Game.cpp  Makefile  cmake_install.cmake  game
src/: Helpers.cpp  Helpers.h
src/Assets/: Assets.h
src/Game/: Bird.cpp  Bird.h  Pipe.cpp  Pipe.h
src/Game/Scenes/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h
src/Renderer/: Colors.h
src/Renderer/Font/: Font.cpp  Font.h
src/Renderer/Scener/: Scene.cpp  Scene.h  Scener.cpp  Scener.h
src/Renderer/Screen/: Screen.cpp  Screen.h
src/Renderer/Sprite/: Sprite.cpp  Sprite.h
src/Renderer/UI/: UIBlock.cpp  UIBlock.h
